# kafka-connect-arangodb

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.test  README.md  pom.xml
.CI/: Jenkinsfile
config/: quickstart-kafka-connect-arangodb-sink.properties
integration-tests/: Dockerfile  connector-config.json  deploy.sh  kafka-publisher-config.json  test.sh
integration-tests/kafka-messages/: initial-state.json  outdated.json  state-update.json
integration-tests/send-block/: .gitignore  Cargo.toml  config.json
integration-tests/send-block/src/: kafka_producer.rs  main.rs
src/main/java/io/github/jaredpetersen/kafkaconnectarangodb/assignor/: ForcedPartitionsAssignor.java  ForcedPartitionsAssignorConfig.java
src/main/java/io/github/jaredpetersen/kafkaconnectarangodb/sink/: ArangoDbSinkTask.java
src/main/java/io/github/jaredpetersen/kafkaconnectarangodb/sink/config/: ArangoDbSinkConfig.java
src/main/java/io/github/jaredpetersen/kafkaconnectarangodb/sink/errors/: ExternalMessageDataMalformedURLException.java
src/main/java/io/github/jaredpetersen/kafkaconnectarangodb/sink/writer/: RecordConverter.java  Writer.java
src/test/unit/java/io/github/jaredpetersen/kafkaconnectarangodb/sink/config/: ArangoDbSinkConfigTest.java
src/test/unit/java/io/github/jaredpetersen/kafkaconnectarangodb/sink/writer/: RecordConverterTest.java  WriterTest.java
