[package]
name = "send-block"
version = "0.1.0"
authors = ["Alexey Vavilin <mnogoborec@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
serde_json = "1.0.41"
serde = "1.0.91"
serde_derive = "1.0.91"
hex = "0.3.2"
tokio = { version = "0.2.5", features = ["rt-core", "macros", "blocking"]}
log = "0.4"
log4rs = "0.8.3"
futures = "0.3.0"
futures-timer = "3.0.1"
rdkafka = "0.23"
clap = "2.33.0"
rand = "0.7.3"

[target.'cfg(windows)'.dependencies.rdkafka]
version = "0.23.0"
features = ["cmake_build"]
